changed local image to docker hub image